--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -8,6 +8,21 @@
 
     <h1 th:text="${title}"></h1>
 
+    <table>
+        <tr th:each="colorsRow : ${colors}">
+
+            <td width="100" height="100"
+                th:each="color : ${colorsRow}"
+                th:attr="bgcolor=${color}"/>
+
+        </tr>
+
+    </table>
+
+
+
+
+
 
 </body>
 </html>
