--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -13,8 +13,8 @@
 
             <td width="100" height="100"
                 th:each="color : ${colorsRow}"
-                th:attr="bgcolor=${color}"/>
-
+                th:attr="bgcolor=${color}"
+                th:onclick="'location.href = \''  +  @{/select/{c}(c=${color})} + '\''"/>
         </tr>
 
     </table>
