--- a/src/main/resources/templates/stat.html
+++ b/src/main/resources/templates/stat.html
@@ -8,7 +8,34 @@
 
     <h1 th:text="${title}"></h1>
 
-    Wykres...
+    <div style="max-width: 800px; margin: 50px auto">
+        <canvas id="bar-chart" width="1600" height="900"></canvas>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+    <script th:inline="javascript">
+        new Chart(document.getElementById("bar-chart"), {
+            type: 'bar',
+            data: {
+                labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+                datasets: [
+                    {
+                        label: "Population (millions)",
+                        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+                        data: [2478,5267,734,784,433]
+                    }
+                ]
+            },
+            options: {
+                legend: { display: false },
+                title: {
+                    display: true,
+                    text: 'Predicted world population (millions) in 2050'
+                }
+            }
+        });
+    </script>
 
 
 
