--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="${title}"></title>
-</head>
-<body>
+<div xmlns:th="https://www.thymeleaf.org"
+     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     layout:decorate="~{fragments/layout}">
 
-    <h1 th:text="${title}"></h1>
+    <div layout:fragment="content" class="uk-section">
+        <div class="uk-container uk-container-xsmall">
 
-    <table>
-        <tr th:each="colorsRow : ${colors}">
+            <h1 class="uk-heading-divider" th:text="${title}"></h1>
 
-            <td width="100" height="100"
-                th:each="color : ${colorsRow}"
-                th:attr="bgcolor=${color}"
-                th:onclick="'location.href = \''  +  @{/select/{c}(c=${color})} + '\''"/>
-        </tr>
+            <table>
+                <tr th:each="colorsRow : ${colors}">
 
-    </table>
+                    <td width="100" height="100"
+                        th:each="color : ${colorsRow}"
+                        th:attr="bgcolor=${color}"
+                        th:onclick="'location.href = \''  +  @{/select/{c}(c=${color})} + '\''"/>
+                </tr>
 
+            </table>
 
+        </div>
+    </div>
 
-
-
-
-</body>
-</html>
+</div>
